--- a/ars/01bs/flight_create.html
+++ b/ars/01bs/flight_create.html
@@ -7,6 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="flight_list.html"><b>Airline Reservation System</b></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="flight_list.html">All Flights</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="flight_create.html">Add Flight</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <h3><a href="flight_list.html" class="btn btn-light">Go back</a>New Flight</h3>
     <div class="container">
         <div class="form-group mb-3">
