--- a/ars/01bs/flight_list.html
+++ b/ars/01bs/flight_list.html
@@ -7,8 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    
-    <h3>LIST OF FLIGHT</h3>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="flight_list.html"><b>Airline Reservation System</b></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="flight_list.html">All Flights</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="flight_create.html">Add Flight</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <h3>LIST OF FLIGHT</h3>
     <div class="container">
     <table class="table table-striped table-primary">
         <thead class="table-dark">
@@ -17,6 +35,7 @@
             <th scope="col">Airline Name</th>
             <th scope="col">Source</th>
             <th scope="col">Destination</th>
+            <th></th>
           </tr>
         </thead>
         <tbody class="table-light">
@@ -25,12 +44,31 @@
             <td>Air India</td>
             <td>Mumbai</td>
             <td>Abu dhabhi</td>
+          <td>
+            <a href="flight_edit.html?id=123456780" class="btn btn-warning btn-outline-success me-2">Edit</a>
+            <button class="btn btn-danger">Delete</button>
+          </td>
+            
           </tr>
           <tr>
             <th scope="row">6E151</th>
             <td>Indigo</td>
             <td>Hyderabad</td>
             <td>Banglore</td>
+            <td>
+              <a href="flight_edit.html?id=123456781" class="btn btn-warning btn-outline-success me-2">Edit</a>
+              <button class="btn btn-danger">Delete</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">IN327</th>
+            <td>Alibab</td>
+            <td>chennai</td>
+            <td>Mumbai</td>
+            <td>
+              <a href="flight_edit.html?id=123456782" class="btn btn-warning btn-outline-success me-2">Edit</a>
+              <button class="btn btn-danger">Delete</button>
+            </td>
           </tr>
         </tbody>
       </table>
